test/data/logindata.js
module.exports =
    
    [
        
        {
            username: "invalid user email",
            email: "testinvalidmailinator.com",
            password: "Stephanie1!",
            errormsg: "Email is invalid"
            
        },
        {
            username: "invalid password",
            email: "test@mailinator.com",
            password: "12345678!",
            errormsg: "Wrong email or password"
            
        },
        {
            username: "default user",
            email: "test@mailinator.com",
            password: "Stephanie1!",
            errormsg: ""

            

        }
    ];